--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -16,14 +16,17 @@ jobs:
     runs-on: self-hosted
 
     steps:
+      # Faz o checkout do código
       - name: Checkout configurations
         uses: actions/checkout@v2
 
+      # Configura o acesso ao Kubernetes
       - name: Set up Kubernetes configuration
         run: |
           mkdir -p ~/.kube
           echo "${{ secrets.KUBECONFIG }}" > ~/.kube/config
 
+      # Atualiza o serviço com base no nome fornecido
       - name: Update ocelot service
         if: ${{ github.event.client_payload.services == 'ocelot' }}
         run: |
@@ -57,8 +60,8 @@ jobs:
             kubectl apply -f $CONFIGMAP_FILE
           fi
 
-      if: ${{ github.event.client_payload.services == 'user-query' }}
-        if: ${{ inputs.service == 'user-query' }}
+      - name: Update user-query service
+        if: ${{ github.event.client_payload.services == 'user-query' }}
         run: |
           echo "Deploying service: user-query"
 
