--- a/.github/workflows/pipeline.yaml
+++ b/.github/workflows/pipeline.yaml
@@ -26,12 +26,12 @@ jobs:
           mkdir -p ~/.kube
           echo "${{ secrets.KUBECONFIG }}" > ~/.kube/config
 
+      - name: List files for debugging
+        run: |
+          ls -R
+
       # Atualiza o serviço com base no nome fornecido
       - name: Update ocelot service
-      
-        - name: List files for debugging
-          run: ls -R
-          
         if: ${{ github.event.client_payload.services == 'ocelot' }}
         run: |
           echo "Deploying service: ocelot"
